[package]
name = "bach"
version = "0.0.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Discrete-event simulation environment for async workflows"
license = "MIT"
edition = "2018"

[dependencies]
anymap = "0.12"
arr_macro = "0.1"
async-task = { version = "4", default-features = false }
flume = "0.9"
futures = { version = "0.3", default-features = false }
intrusive-collections = "0.9"
petgraph = "0.5"

[dev-dependencies]
bolero = "0.6"
