[package]
name = "bach"
version = "0.0.5"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Discrete-event simulation environment for async workflows"
license = "MIT"
edition = "2018"

[dependencies]
arr_macro = "0.1"
async-task = { version = "4", default-features = false }
futures = { version = "0.3", default-features = false }
intrusive-collections = "0.9"
parking_lot = "0.12"
pin-project = "1"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"

[dev-dependencies]
bolero = "0.6"
